--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_core: ^2.4.1
   permission_handler: ^10.2.0
+  geolocator: ^7.1.0
+  geocoding: ^2.0.0
+  flutter_typeahead: ^3.1.3
+  flutter_google_places: ^0.3.0
+  get: ^4.1.4
+  http: any
 
 dev_dependencies:
   flutter_test:
