1st revision of code with base frame

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,9 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    aaptOptions {
+        cruncherEnabled = false
+    }
 }
 
 flutter {
