--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:label="frontned"
+        android:label="Life Lane"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
